--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d6c5822ef
-	base = 198e99d1b
+	base = 17f94ae9d
 	trim = rosidl_runtime_cpp
-	trimbase = 
+	trimbase = 198e99d1b
