--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d6c5822ef
-	base = fffe00b83
+	base = c31c23b08
 	trim = rosidl_generator_type_description
-	trimbase = 
+	trimbase = fffe00b83
