--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d6c5822ef
-	base = f7d1c9a4f
+	base = 4c76e446b
 	trim = rosidl_pycommon
-	trimbase = 
+	trimbase = f7d1c9a4f
