--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d6c5822ef
-	base = f33640676
+	base = f0e3de2ae
 	trim = rosidl_parser
-	trimbase = 
+	trimbase = f33640676
