--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d6c5822ef
-	base = 14728532c
+	base = 9f688a97a
 	trim = rosidl_generator_cpp
-	trimbase = 
+	trimbase = 14728532c
