--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d6c5822ef
-	base = 733fa5a95
+	base = 3a987390c
 	trim = rosidl_generator_c
-	trimbase = 
+	trimbase = 733fa5a95
