--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d6c5822ef
-	base = bda66ae72
+	base = 52179f118
 	trim = rosidl_typesupport_interface
-	trimbase = 
+	trimbase = bda66ae72
