--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d6c5822ef
-	base = bc051691d
+	base = 20f63403b
 	trim = rosidl_cmake
-	trimbase = 
+	trimbase = bc051691d
