--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 26ffaf652c8b
 	base = 69f57df1446b
 	trim = rosidl_typesupport_introspection_cpp
-	trimbase = ec06dbe02904
+	trimbase = 
