--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d6c5822ef
-	base = 5d2629474
+	base = 99a363562
 	trim = rosidl_typesupport_introspection_cpp
-	trimbase = 
+	trimbase = 5d2629474
