--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d6c5822ef
-	base = 52f7fd238
+	base = 243af6969
 	trim = rosidl_runtime_c
-	trimbase = 
+	trimbase = 52f7fd238
