--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d6c5822ef
-	base = 58dd5fcf2
+	base = 3119ced58
 	trim = rosidl_cli
-	trimbase = 
+	trimbase = 58dd5fcf2
