--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d6c5822ef
-	base = 957f3a838
+	base = eb2db9b97
 	trim = rosidl_adapter
-	trimbase = 
+	trimbase = 957f3a838
