--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d6c5822ef
-	base = 227be9f79
+	base = 0d8428f34
 	trim = rosidl_typesupport_introspection_c
-	trimbase = 
+	trimbase = 227be9f79
