--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6899b0bea
-	base = 5400c2514
+	base = 064b83bfb
 	trim = rosidl_runtime_cpp
-	trimbase = 
+	trimbase = 5400c2514
