--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6899b0bea
-	base = 7137c3d63
+	base = d7994e4d4
 	trim = rosidl_generator_type_description
-	trimbase = 
+	trimbase = 7137c3d63
