--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6899b0bea
-	base = e2a938151
+	base = 7f63c9c48
 	trim = rosidl_pycommon
-	trimbase = 
+	trimbase = e2a938151
