--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6899b0bea
-	base = 5ba1f5de5
+	base = 4203c45e2
 	trim = rosidl_parser
-	trimbase = 
+	trimbase = 5ba1f5de5
