--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6899b0bea
-	base = 61b2a4cfc
+	base = d0720d313
 	trim = rosidl_generator_cpp
-	trimbase = 
+	trimbase = 61b2a4cfc
