--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6899b0bea
-	base = c62c19559
+	base = f928d3f6e
 	trim = rosidl_generator_c
-	trimbase = 
+	trimbase = c62c19559
