--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6899b0bea
-	base = 13e3e7187
+	base = 7f3c6a16c
 	trim = rosidl_typesupport_interface
-	trimbase = 
+	trimbase = 13e3e7187
