--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6899b0bea
-	base = e3d7d9148
+	base = c28c78f55
 	trim = rosidl_cmake
-	trimbase = 
+	trimbase = e3d7d9148
