--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6899b0bea
-	base = 990320919
+	base = a3b1d7a4a
 	trim = rosidl_typesupport_introspection_cpp
-	trimbase = 
+	trimbase = 990320919
