--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6899b0bea
-	base = 5ea2c532b
+	base = f5f9ef44f
 	trim = rosidl_runtime_c
-	trimbase = 
+	trimbase = 5ea2c532b
