--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6899b0bea
-	base = 218db490d
+	base = 1d468dc6c
 	trim = rosidl_cli
-	trimbase = 
+	trimbase = 218db490d
