--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6899b0bea
-	base = 7b7df4ac7
+	base = 98a23d343
 	trim = rosidl_adapter
-	trimbase = 
+	trimbase = 7b7df4ac7
