--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6899b0bea
-	base = acad6a6ea
+	base = 4af270258
 	trim = rosidl_typesupport_introspection_c
-	trimbase = 
+	trimbase = acad6a6ea
