--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ce65a41f
-	base = caa9fd6dc
+	base = 970bae507
 	trim = rosidl_runtime_cpp
-	trimbase = 
+	trimbase = caa9fd6dc
