--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ce65a41f
-	base = 79c929368
+	base = 4d084d5de
 	trim = rosidl_parser
-	trimbase = 
+	trimbase = 79c929368
