--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ce65a41f
-	base = 54ce4faef
+	base = 839056f6a
 	trim = rosidl_generator_cpp
-	trimbase = 
+	trimbase = 54ce4faef
