--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ce65a41f
-	base = 021e1024c
+	base = 59f0a59e3
 	trim = rosidl_generator_c
-	trimbase = 
+	trimbase = 021e1024c
