--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ce65a41f
-	base = 622d17709
+	base = 84bf709b8
 	trim = rosidl_typesupport_interface
-	trimbase = 
+	trimbase = 622d17709
