--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ce65a41f
-	base = b63f19922
+	base = f2e4f699f
 	trim = rosidl_cmake
-	trimbase = 
+	trimbase = b63f19922
