--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ce65a41f
-	base = 7279cb520
+	base = 9faf296da
 	trim = rosidl_typesupport_introspection_cpp
-	trimbase = 
+	trimbase = 7279cb520
