--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ce65a41f
-	base = ffc5575c8
+	base = e7159313e
 	trim = rosidl_runtime_c
-	trimbase = 
+	trimbase = ffc5575c8
