--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ce65a41f
-	base = ae6fad135
+	base = 573ccf52e
 	trim = rosidl_cli
-	trimbase = 
+	trimbase = ae6fad135
