--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ce65a41f
-	base = 33d4fdd56
+	base = 2c03876e7
 	trim = rosidl_adapter
-	trimbase = 
+	trimbase = 33d4fdd56
