--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ce65a41f
-	base = c1d92eba8
+	base = 48f6124ba
 	trim = rosidl_typesupport_introspection_c
-	trimbase = 
+	trimbase = c1d92eba8
